# AegisFS

./: .gitignore  DOCUMENTATION_UPDATE_SUMMARY.md  Dockerfile  GUI_plan.md  LICENSE-APACHE  LICENSE-MIT  README.md  deny.toml  dev-roadmap.md  lg-file-persistance-fix.md
.cursor/: Dockerfile  environment.json
.cursor/rules/: code-placement-rules.mdc
.devcontainer/: devcontainer.json
.github/: pull_request_template.md
.github/workflows/: ci.yml  performance.yml  release.yml
docs/: BUILD.md  DOCKER.md  api_reference.md  architecture.md  development.md  user_guide.md
fs-app/cli/: Cargo.toml
fs-app/cli/src/: main.rs
fs-app/cli/src/commands/: format.rs  mod.rs  mount.rs  scrub.rs  snapshot.rs
fs-app/gui/: README.md  index.html  package-lock.json  package.json  vite.config.ts
fs-app/gui/src/: main.ts  styles-scss.bak  styles.css
fs-app/gui/src-tauri/: Cargo.toml  tauri.conf.json
fs-app/gui/src-tauri/src/: lib.rs  main.rs
fs-core/: CLAUDE.md  Cargo.toml  build.rs  deny.toml
fs-core/benches/: filesystem_ops.rs
fs-core/src/: block_bitmap.rs  cache.rs  error.rs  layout.rs  lib.rs
fs-core/src/blockdev/: blockdev_trait.rs  mod.rs
fs-core/src/format/: mod.rs
fs-core/src/modules/: mod.rs
fs-core/src/modules/checksums/: mod.rs
fs-core/src/modules/journaling/: mod.rs
fs-core/src/modules/snapshot/: mod.rs
fs-core/tests/: persistence_test.rs  write_operations.rs
scripts/: build-cross-platform.bat  build-cross-platform.sh  check-env.sh  ci-helpers.sh  quick-deploy.sh  quick_test.sh
