[package]
name = "aegisfs-core"
version = "0.1.0"
edition = "2021"
authors = ["Your Name <your.email@example.com>"]
description = "Core functionality for AegisFS filesystem"
license = "MIT OR Apache-2.0"
repository = "https://github.com/your-username/aegisfs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
default = []
# Platform-specific features (auto-detected)
fuse = ["dep:fuser", "dep:ctrlc", "dep:clap", "dep:env_logger"]
winfsp = ["dep:winfsp", "dep:clap", "dep:env_logger"]
encryption = ["aes-gcm", "hkdf"]
compression = ["lz4_flex", "zstd"]
std = []

[dependencies]
# Core dependencies
log = "0.4"
anyhow = { version = "1.0", features = ["backtrace"] }
thiserror = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
byteorder = { version = "1.4", features = ["i128"] }
getrandom = "0.2"
lru = "0.10"
tempfile = { version = "3.3", default-features = false }
arrayref = "0.3"

# Async runtime
tokio = { version = "1.0", features = ["full", "rt-multi-thread", "macros"] }
async-trait = "0.1"
futures = "0.3"
tokio-util = { version = "0.7", features = ["io"] }

# Cross-platform filesystem support
# Unix/Linux FUSE support
fuser = { version = "0.15", optional = true }

# Optional dependencies for filesystem operations
ctrlc = { version = "3.4", features = ["termination"], optional = true }
clap = { version = "4.0", features = ["derive"], optional = true }
env_logger = { version = "0.10", optional = true }

# Cryptography
aes-gcm = { version = "0.10", optional = true }
hkdf = { version = "0.12", optional = true }
ring = "0.17"

# Compression
lz4_flex = { version = "0.11", optional = true }
zstd = { version = "0.13", optional = true, default-features = false }

# Concurrency
parking_lot = "0.12"

# Checksums
crc32fast = "1.3"

# Date/time handling
chrono = "0.4"

# Platform-specific dependencies
[target.'cfg(unix)'.dependencies]
libc = "0.2"

[target.'cfg(windows)'.dependencies]
winapi = { version = "0.3", features = ["fileapi", "handleapi", "winbase", "winnt", "minwinbase", "ioapiset"] }
winfsp = { version = "0.2", optional = true }

[dev-dependencies]
tempfile = "3.3"
tokio = { version = "1.0", features = ["full", "rt-multi-thread"] }
log = "0.4"
env_logger = "0.10"
rand = "0.8"
criterion = { version = "0.5", features = ["html_reports"] }

[lib]
name = "aegisfs"
path = "src/lib.rs"

# No binaries defined - fs-core is a pure library
# CLI binaries are now in fs-app/cli/

[[bench]]
name = "filesystem_ops"
harness = false
