[package]
name = "aegisfs-cli"
version = "0.1.0"
edition = "2021"
authors = ["Your Name <your.email@example.com>"]
description = "Command-line interface for AegisFS filesystem"
license = "MIT OR Apache-2.0"
repository = "https://github.com/your-username/aegisfs"

[[bin]]
name = "aegisfs"
path = "src/main.rs"

[features]
default = ["fuse"]
fuse = []

[dependencies]
# Core AegisFS library
aegisfs = { path = "../../fs-core", package = "aegisfs-core", features = ["fuse"] }

# CLI framework
clap = { version = "4.0", features = ["derive"] }

# Logging
log = "0.4"
env_logger = "0.10"

# Error handling
anyhow = { version = "1.0", features = ["backtrace"] }

# Async runtime
tokio = { version = "1.0", features = ["full", "rt-multi-thread", "macros"] }

# Filesystem operations
fuser = "0.15"

# Signal handling for mount command
ctrlc = { version = "3.4", features = ["termination"] }

# Date/time handling
chrono = "0.4" 